--- a/systemd-boot-snapshots.conf
+++ b/systemd-boot-snapshots.conf
@@ -31,6 +31,11 @@ SNAPSHOTS_SUBMENU="true"
 # Default: "{kernel_version} [{safety}] - {date} {type} {description}"
 SNAPSHOT_TITLE_FORMAT="{kernel_version} [{safety}] - {date} {type} {description}"
 
+# Date format for snapshot display
+# Uses strftime format codes. Example: "%b %d %Y %H:%M" for "Jun 15 2024 14:30"
+# Default: "%b %d %Y %H:%M"
+DATE_FORMAT="%b %d %Y %H:%M"
+
 # Enable debug logging during boot
 # This will write debug information to /var/log/systemd-boot-snapshots-debug.log
 # Helps diagnose issues when booting from snapshots fails
